--- a/.gitignore
+++ b/.gitignore
@@ -1,63 +1,2 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Virtual Environment
-venv/
-env/
-ENV/
-.env
-.venv
-env.bak/
-venv.bak/
-
-# IDEs and Editors
-.idea/
-.vscode/
-*.swp
-*.swo
-*~
-
-# Project specific
-*.log
-.DS_Store
-cookies.txt
-cookies.json
-
-# Selenium
-geckodriver.log
-chromedriver.log
-
-# Test coverage
-.coverage
-htmlcov/
-.tox/
-.nox/
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
-output/
+# Created by venv; see https://docs.python.org/3/library/venv.html
+*
